--- a/MyiOSTrialTableView/MyiOSTrialTableView/Base.lproj/Main.storyboard
+++ b/MyiOSTrialTableView/MyiOSTrialTableView/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,85 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyiOSTrialTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mf1-vV-bWm">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="100" id="Eiw-aP-qJU" customClass="CustomTableViewCell" customModule="MyiOSTrialTableView" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Eiw-aP-qJU" id="0Xn-IO-Deg">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W8q-Ak-0yx">
+                                                    <rect key="frame" x="10" y="5" width="355" height="89.5"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a" translatesAutoresizingMaskIntoConstraints="NO" id="iZ4-wM-Ydg">
+                                                            <rect key="frame" x="0.0" y="4" width="80" height="80"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="80" id="awP-Yy-UjM"/>
+                                                                <constraint firstAttribute="height" constant="80" id="xhv-H4-NbP"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eY0-fK-zqY">
+                                                            <rect key="frame" x="88" y="8" width="259" height="73.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="eY0-fK-zqY" firstAttribute="leading" secondItem="iZ4-wM-Ydg" secondAttribute="trailing" constant="8" id="Pdm-uK-whl"/>
+                                                        <constraint firstItem="iZ4-wM-Ydg" firstAttribute="centerY" secondItem="W8q-Ak-0yx" secondAttribute="centerY" id="UT2-fM-Cey"/>
+                                                        <constraint firstItem="iZ4-wM-Ydg" firstAttribute="leading" secondItem="W8q-Ak-0yx" secondAttribute="leading" id="YMi-ha-WNu"/>
+                                                        <constraint firstAttribute="bottom" secondItem="eY0-fK-zqY" secondAttribute="bottom" constant="8" id="j1Y-8t-ovm"/>
+                                                        <constraint firstItem="eY0-fK-zqY" firstAttribute="top" secondItem="W8q-Ak-0yx" secondAttribute="top" constant="8" id="whJ-Xl-jz4"/>
+                                                        <constraint firstAttribute="trailing" secondItem="eY0-fK-zqY" secondAttribute="trailing" constant="8" id="zKD-Dk-8CB"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="W8q-Ak-0yx" firstAttribute="leading" secondItem="0Xn-IO-Deg" secondAttribute="leading" constant="10" id="64X-2M-Go7"/>
+                                                <constraint firstAttribute="bottom" secondItem="W8q-Ak-0yx" secondAttribute="bottom" constant="5" id="I0t-Bg-srb"/>
+                                                <constraint firstItem="W8q-Ak-0yx" firstAttribute="top" secondItem="0Xn-IO-Deg" secondAttribute="top" constant="5" id="K81-mh-Ffo"/>
+                                                <constraint firstAttribute="trailing" secondItem="W8q-Ak-0yx" secondAttribute="trailing" constant="10" id="ulc-vz-bhz"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="animalImage" destination="iZ4-wM-Ydg" id="Hhj-QE-amD"/>
+                                            <outlet property="animalLbl" destination="eY0-fK-zqY" id="861-pa-imy"/>
+                                            <outlet property="cellView" destination="W8q-Ak-0yx" id="8OG-JQ-dVI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="mf1-vV-bWm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="05k-zQ-xmd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="mf1-vV-bWm" secondAttribute="bottom" id="3PT-xb-MQv"/>
+                            <constraint firstItem="mf1-vV-bWm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Enu-Zr-mDD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mf1-vV-bWm" secondAttribute="trailing" id="eua-eD-gB9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="mf1-vV-bWm" id="EpG-bY-GIM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="a" width="900" height="675"/>
+    </resources>
 </document>
